## Process this file with automake to produce Makefile.in

SUBDIRS = macbuild sf2 winbuild src doc include
EXTRA_DIST = TODO acinclude.m4 autogen.sh fluidsynth.pc.in \
  fluidsynth.spec.in fluidsynth.spec fluidsynth.anjuta README-OSX
DISTCLEANFILES = fluidsynth.pc
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = fluidsynth.pc
